--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -92,9 +92,11 @@
     <Compile Include="Vector3.cs" />
   </ItemGroup>
   <PropertyGroup>
-    <PreBuildEvent>echo Resoloving dependencies
-
-xcopy /E /Y "$(SolutionDir)dependencies" "$(TargetDir)"
-</PreBuildEvent>
+    <PreBuildEvent Condition=" '$(OS)' != 'Unix' ">echo Resoloving dependencies
+      xcopy /E /Y "$(SolutionDir)dependencies" "$(TargetDir)"
+    </PreBuildEvent>
+    <PreBuildEvent Condition=" '$(OS)' == 'Unix' ">
+      cp -r "$(SolutionDir)dependencies" "$(TargetDir)"
+    </PreBuildEvent>
   </PropertyGroup>
 </Project>
