--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Screen\Screen.cs" />
     <Compile Include="Shaders\Shader.cs" />
     <Compile Include="Textures\TextureManager.cs" />
+    <Compile Include="Text\Fonts.BlockedFonts.cs" />
     <Compile Include="Text\Fonts.cs" />
     <Compile Include="Text\OpenGlFont.cs" />
     <Compile Include="Text\OpenGlFontChar.cs" />
