--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -123,6 +123,14 @@
     <Compile Include="TrackFollowingObject\AI\TravelPointData.cs" />
     <Compile Include="TrackFollowingObject\AI\TravelStopData.cs" />
     <Compile Include="TrackFollowingObject\TrackFollowingObject.cs" />
+    <Compile Include="TractionModels\Steam\Boiler.cs" />
+    <Compile Include="TractionModels\Steam\Cutoff.cs" />
+    <Compile Include="TractionModels\Steam\CylinderChest.cs" />
+    <Compile Include="TractionModels\Steam\ExhaustSteamInjector.cs" />
+    <Compile Include="TractionModels\Steam\Firebox.cs" />
+    <Compile Include="TractionModels\Steam\LiveSteamInjector.cs" />
+    <Compile Include="TractionModels\Steam\Regulator.cs" />
+    <Compile Include="TractionModels\Steam\SteamEngine.cs" />
     <Compile Include="TrainManager.cs" />
     <Compile Include="Train\BrakeSystem.cs" />
     <Compile Include="Train\CommandEntry.cs" />
