--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -141,6 +141,8 @@
     <Compile Include="TractionModels\Steam\SteamEngine.cs" />
     <Compile Include="TractionModels\BVE\MotorCar.cs" />
     <Compile Include="TractionModels\Steam\Tender.cs" />
+    <Compile Include="TractionModels\Steam\ValveGear.cs" />
+    <Compile Include="TractionModels\Steam\ValveGear.Rod.cs" />
     <Compile Include="TrainManager.cs" />
     <Compile Include="Train\BrakeSystem.cs" />
     <Compile Include="Train\CommandEntry.cs" />
