--- a/source/Plugins/Formats.Msts/Formats.Msts.csproj
+++ b/source/Plugins/Formats.Msts/Formats.Msts.csproj
@@ -64,4 +64,7 @@
       <Name>OpenBveApi</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
 </Project>
