--- a/source/Plugins/Route.Mechanik/Route.Mechanik.csproj
+++ b/source/Plugins/Route.Mechanik/Route.Mechanik.csproj
@@ -64,7 +64,9 @@
       <Name>RouteManager2</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
