--- a/source/Plugins/Object.Animated/Object.Animated.csproj
+++ b/source/Plugins/Object.Animated/Object.Animated.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -40,6 +40,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\AnimatedKey.cs" />
+    <Compile Include="Enums\AnimatedSection.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Plugin.Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
