--- a/source/TrainEditor/TrainEditor.csproj
+++ b/source/TrainEditor/TrainEditor.csproj
@@ -83,7 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Options.cs" />
-    <Compile Include="System\Class1.cs" />
+    <Compile Include="System\Host.cs" />
     <Compile Include="TrainDat.cs" />
     <Compile Include="formEditor.cs">
       <SubType>Form</SubType>
