--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -105,6 +105,7 @@
     <Compile Include="SafetySystems\ATS\AtsModes.cs" />
     <Compile Include="SafetySystems\DefaultSafetySystems.cs" />
     <Compile Include="SafetySystems\DSD\DriverSupervisionDevice.cs" />
+    <Compile Include="SafetySystems\DSD\DriverSupervisionDevice.ResetModes.cs" />
     <Compile Include="SafetySystems\DSD\DriverSupervisionDevice.Types.cs" />
     <Compile Include="SafetySystems\PassAlarm.cs" />
     <Compile Include="SafetySystems\PilotLamp.cs" />
