--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -107,6 +107,7 @@
     <Compile Include="SafetySystems\PilotLamp.cs" />
     <Compile Include="SafetySystems\Plugin\AI\PluginAI.cs" />
     <Compile Include="SafetySystems\Plugin\AI\PluginAI.HeiAts.cs" />
+    <Compile Include="SafetySystems\Plugin\AI\PluginAI.MTRAuto.cs" />
     <Compile Include="SafetySystems\Plugin\AI\PluginAI.UKDt.cs" />
     <Compile Include="SafetySystems\Plugin\AI\PluginAI.UKMUt.cs" />
     <Compile Include="SafetySystems\Plugin\AI\PluginAI.UKSpt.cs" />
